# AssinmentExample

./: .gitignore
04_streaming_api_milk_movement/: .gitignore  .pre-commit-config.yaml  assignment.md  main.py  pyproject.toml  readme.md  setup.cfg  webhook.py
04_streaming_api_milk_movement/helpers/: __init__.py  constants.py  init_db.py  print_table_schema.py
