[tool.poetry]
name = "milk-movement"
version = "0.1.0"
description = "Milkmoovement Example Assignment"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
requests = "^2.31.0"
duckdb = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
